[gd_scene load_steps=10 format=3 uid="uid://bnjwhtkghj0bv"]

[ext_resource type="Script" path="res://Scripts/skins.gd" id="1_w7k8a"]
[ext_resource type="Texture2D" uid="uid://2ywk6o70s3w8" path="res://Assets/ChatGPT Image 10 may 2025, 01_34_49 p.m..png" id="2_vmih4"]
[ext_resource type="Texture2D" uid="uid://dtg838lxt4e7q" path="res://Assets/Sprite-0013.png" id="3_vuhp6"]
[ext_resource type="Texture2D" uid="uid://1v6vv7v23rfj" path="res://Assets/Sprite-0014.png" id="4_ucaru"]
[ext_resource type="Texture2D" uid="uid://dq8w80dia2rr4" path="res://Assets/Sprite-0015.png" id="5_5kf60"]
[ext_resource type="Texture2D" uid="uid://d2ll3r8rcodto" path="res://Assets/Sprite-0016.png" id="6_x6d5g"]
[ext_resource type="Texture2D" uid="uid://bxyre6mhu8fqu" path="res://Assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/1.png" id="7_cbylt"]
[ext_resource type="Texture2D" uid="uid://cl1xhfxujvheb" path="res://Assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/2.png" id="8_bo1th"]
[ext_resource type="Texture2D" uid="uid://bhklupxuxqlpa" path="res://Assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/4.png" id="9_7q7b7"]

[node name="Skins" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w7k8a")

[node name="Titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.5
offset_top = -153.0
offset_right = 118.5
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "BALLOON GAME"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -79.0
offset_right = 42.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0, 0, 0, 0)
text = "......"

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/HBoxContainer/Button"]
texture_filter = 1
position = Vector2(17.5, 20)
scale = Vector2(0.0336914, 0.0332031)
texture = ExtResource("2_vmih4")

[node name="Skin1" type="Button" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("3_vuhp6")

[node name="Skin2" type="Button" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("4_ucaru")

[node name="Skin3" type="Button" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("5_5kf60")

[node name="Skin4" type="Button" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("6_x6d5g")

[node name="Salir" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Salir
"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 3
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
position = Vector2(159.75, 200)
scale = Vector2(0.556424, 1.23148)
texture = ExtResource("7_cbylt")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 2
texture_repeat = 2
motion_mirroring = Vector2(315, 0)

[node name="2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_filter = 1
texture_repeat = 2
position = Vector2(159.5, 275)
scale = Vector2(0.557292, 0.771605)
texture = ExtResource("8_bo1th")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_filter = 1
texture_repeat = 2
position = Vector2(160, 294)
scale = Vector2(0.555556, 0.648148)
texture = ExtResource("9_7q7b7")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Skin1" to="." method="_on_skin_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Skin2" to="." method="_on_skin_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Skin3" to="." method="_on_skin_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Skin4" to="." method="_on_skin_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
